--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^3.1.14",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "react-pdf-tailwind": "^2.2.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
